--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,9 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hi!</h1>
-    <h1>hi!</h1>
-    <h1>hi!</h1>
-    <h1>hi!</h1>
+    <h1>haha</h1>
+    <h1>YS</h1>
+    <h1>Park</h1>
 </body>
 </html>
